[metadata]
name = searchlights
version = 0.2.0
author = Ma Feilong
author_email = mafeilong@gmail.com
description = A collection of pre-computed searchlights.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = brain, surface, fmri, mvpa, searchlight, searchlight-analysis
url = https://feilong.github.io/searchlights/
project_urls =
    Bug Tracker = https://github.com/feilong/searchlights/issues
    Source Code = https://github.com/feilong/searchlights
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

install_requires =
    numpy
    surface_spaces

[options.package_data]
searchlights =
    data/on1031_dijkstra/onavg-ico32_*20mm.npz

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
extra =
    datalad
